2006-08-21  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/manager/component.py:
	  a component logging in could already be running, so don't set the
	  mood to waking on login

2006-08-21  Thomas Vander Stichele  <thomas at apestaart dot org>

	* common/common.mk:
	  remove -R from trial for coverage

2006-08-17  Andy Wingo  <wingo@pobox.com>

	* flumotion/test/test_twisted_integration.py
	(IntegrationTestDecoratorTest.testParallelStartAndKill): Update
	for new kill semantics.

	* flumotion/twisted/integration.py (Plan.kill): Change to only
	kill one process, with an optional wait status. status=None, the
	default, means that the signal handler kills the program. status=0
	means that the app caught the signal and returned 0.

2006-08-16  Andy Wingo  <wingo@pobox.com>

	* common/setup.m4: No ac_dest in autoconf 2.60; but we do have
	ac_file.
	(setup): Return the package path, in case any script wants to know
	the srcdir.

	* flumotion/manager/main.py (main): Return 1 on all argument
	errors.

	* flumotion/test/test_twisted_integration.py
	(IntegrationPlanGenerationTest.testTransientProcess)
	(IntegrationPlanGenerationTest.testKill)
	(IntegrationPlanExecuteTest.testTransientProcess)
	(IntegrationPlanExecuteTest.testKill)
	(IntegrationPlanExecuteTest.testUnexpectedProcessExit)
	(IntegrationPlanExecuteTest.testUnexpectedExitCode)
	(IntegrationPlanExecuteTest.testProcessesStillRunning): Update for
	Plan initargs.

	* flumotion/twisted/integration.py (Plan.__init__): Take the test
	case instead of its name, so that we can output our logs in the
	correct directory.
	(_classNameToFileName): New happy function.
	(test.wrappedtest): Create a Plan with the proper initargs.

	* flumotion/test/test_twisted_integration.py
	(IntegrationProcessTest.testTransientProcess)
	(IntegrationProcessTest.testTimeOut)
	(IntegrationProcessTest.testKill)
	(IntegrationTestDecoratorTest.testTransientProcess)
	(IntegrationTestDecoratorTest.testParallelWait)